Minor tweaks as follow-up from last meeting, related links icon change

--- a/src/map/selection/SelectionPreview.scss
+++ b/src/map/selection/SelectionPreview.scss
@@ -214,6 +214,7 @@
 
   li.p6o-link-internal {
     position:relative;
+    cursor:pointer;
 
     .p6o-internal-link-meta {
       overflow:hidden;
