--- a/src/loading/Loading.scss
+++ b/src/loading/Loading.scss
@@ -20,6 +20,10 @@
     flex-direction:column;
     font-size:12px;
 
+    img {
+      margin-top:20px;
+    }
+
     p {
       margin:0;
       padding:10px 0;
