Splash screen message+

--- a/src/loading/Loading.scss
+++ b/src/loading/Loading.scss
@@ -29,6 +29,42 @@
       padding:10px 0;
     }
 
+    .p6o-loading-welcome-message {
+      text-align:center;
+      margin-bottom:20px;
+      
+      h1 {
+        margin-bottom:10px;
+      }
+
+      p {
+        padding:5px 0;
+        font-size:14px;
+      }
+
+      a {
+        color:#fff;
+      }
+
+    }
+
+    .p6o-loading-welcome-close {
+      color:#fff;
+      font-size:16px;
+      border:2px solid #fff;
+      padding:8px 14px;
+      margin-top:30px;
+      border-radius:4px
+    }
+
+    .p6o-loading-welcome-close:disabled {
+      opacity: 0;
+    }
+
+    .p6o-loading-welcome-close:hover {
+      background-color:rgba(255, 255, 255, 0.3);
+    }
+
     .p6o-load-progress-outer {
       margin-top:18px;
       background-color:rgba(255, 255, 255, 0.2);
