--- a/src/map/selection/SelectionPreview.scss
+++ b/src/map/selection/SelectionPreview.scss
@@ -167,7 +167,6 @@
   }
 
   li.p6o-link {
-    padding:15px;
     border-top:1px solid #e9e9e9;
     width:100%;
     box-sizing:border-box;    
@@ -217,6 +216,7 @@
     cursor:pointer;
 
     .p6o-internal-link-meta {
+      padding:15px;
       overflow:hidden;
 
       h3, h4 {
@@ -245,7 +245,7 @@
       flex-basis:30px;
       flex-shrink:0;
       font-size:27px;
-      padding-left:5px;
+      padding:0 15px 0 5px;
       cursor:pointer;
     }
 
@@ -263,6 +263,8 @@
     align-items:center;
 
     .p6o-external-link-meta {
+      padding:15px;
+      width:100%;
       overflow:hidden;
  
       a {
@@ -389,6 +391,7 @@
       margin-top:8px;
       padding:2px 8px;
       background-color:#646464;
+      cursor:pointer;
       @include rounded-corners(3px);
 
       a {
